[gd_scene load_steps=6 format=3 uid="uid://daosd7lwlijyq"]

[ext_resource type="PackedScene" uid="uid://182pf6mbx5mw" path="res://scenes/subscenes/3d_container.tscn" id="1_eried"]
[ext_resource type="Script" path="res://res/scripts/3d_scene_handler.gd" id="1_qepy6"]
[ext_resource type="PackedScene" uid="uid://8d0vtt6vwv4p" path="res://scenes/camera_3d.tscn" id="4_lrwd0"]
[ext_resource type="PackedScene" uid="uid://xf56jn3v7guc" path="res://scenes/tab_menu.tscn" id="5_lio4d"]

[sub_resource type="Environment" id="Environment_0mu3j"]
background_mode = 1
ambient_light_source = 2
ambient_light_color = Color(0.506721, 0.31532, 0.548958, 1)
reflected_light_source = 1

[node name="3dTest" type="Node3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.383223)
script = ExtResource("1_qepy6")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_0mu3j")

[node name="3dContainer" parent="." instance=ExtResource("1_eried")]
resolution = 8
box_color = Color(1, 0, 0.866667, 1)
maxthick = 0.007
alpha_sensitivity = 13.0

[node name="Camera3D" parent="." instance=ExtResource("4_lrwd0")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.76628, 1.39796, 6.79339)
current = true

[node name="TabMenu" parent="." instance=ExtResource("5_lio4d")]

[connection signal="pressed" from="TabMenu/Tab/HBoxContainer/cargas/Button" to="." method="_on_cargas_button_pressed"]
[connection signal="pressed" from="TabMenu/Tab/HBoxContainer/varilla/Button" to="." method="_on_varilla_button_pressed"]
[connection signal="pressed" from="TabMenu/Tab/HBoxContainer/esfera/Button" to="." method="_on_esfera_button_pressed"]
[connection signal="pressed" from="TabMenu/Tab/HBoxContainer/cilindro/Button" to="." method="_on_cilindro_button_pressed"]
[connection signal="pressed" from="TabMenu/Tab/HBoxContainer/placa/Button" to="." method="_on_placa_button_pressed"]

[editable path="Camera3D"]
[editable path="TabMenu"]
[editable path="TabMenu/Tab/HBoxContainer/cargas"]
[editable path="TabMenu/Tab/HBoxContainer/varilla"]
[editable path="TabMenu/Tab/HBoxContainer/esfera"]
[editable path="TabMenu/Tab/HBoxContainer/cilindro"]
[editable path="TabMenu/Tab/HBoxContainer/placa"]
